# tfdevops

./: Dockerfile  justfile  pyproject.toml  readme.md
.github/workflows/: ci.yml  docker.yml
tests/: conftest.py  test_tfdevops.py
tests/functional/: test_fresources.py
tests/functional/terraform/aws_kinesis_stream/: main.tf
tests/unit/: conftest.py  test_resources.py
tests/unit/data/: app_lb.json  elasticache.json  kinesis_stream.json  schema.elasticache_replication_group.json  schema.kinesis_stream.json
tfdevops/: cfn.py  cli.py  resource.py  type_map.json  utils.py
