[tool.poetry]
name = "tfdevops"
version = "0.1.0"
description = "Terraform Support for AWS DevOps Guru"
authors = ["Kapil Thangavelu <kapilt@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
tfdevops = 'tfdevops.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.16"
click = "^8.0.1"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
pytest-terraform = { git = "https://github.com/cloud-custodian/pytest-terraform.git", branch = "work-dir-test-api" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
